<resources>
    <string name="app_name">DDI YOUTH</string>
    <string name="DDI">Darius Dickson Ishaku</string>
    <string name="PDP">People\'s Democratic Party</string>
    <string name="NYCN">National Youth Council Nigeria</string>
    <string name="home_">\n\n\n\n\n\n\n\n\tWelcome. \n Switch between the different tabs on the Navigation Bar for different functions</string>
    <string name="intro_1_header">Arc Darius Dickson Ishaku</string>
    <string name="intro_2_header">Hon Haruna Manu</string>
    <string name="intro_3_header">Our Choice 2019</string>
    <string name="intro_4_header">The Senior Council</string>
    <string name="intro_5_header">The Endorsement</string>
    <string name="intro_6_header">Vote of Confidence</string>
    <string name="intro_7_header">Governor and NYCN Taraba Chairman</string>
    <string name="app_intro_skip">Welcome</string>
    <string name="intro_text_1">An awesome android app that helps you manage your meds intake and improves your health</string>
    <string name="intro_text_2">Deputy Governor of Taraba State</string>
    <string name="intro_text_3">Governor and Deputy Governor of Taraba State</string>
    <string name="intro_text_4">With NYCN State Chairman</string>
    <string name="intro_text_5">Endorsement by NYCN, Taraba</string>
    <string name="intro_text_6">Youth pass Vote of confidence</string>
    <string name="intro_text_7">Winning Team</string>
    <string name="contact">NYCN Taraba State Chapter</string>
    <string name="acc_no">0139519319 GTBank</string>
    <string name="donate">Donate to this campaign</string>
    <string name="caller_tune">Dial *1234# to subscribe to our caller tune ;)</string>
    <string name="website">Visit Website</string>
    <string name="home">Home</string>
    <string name="section1">About NYCN</string>
    <string name="nycn">NYCN</string>
    <string name="section2">About Candidates</string>
    <string name="list_meds">Governor</string>
    <string name="doc">Deputy</string>
    <string name="exit">Exit</string>
    <string name="about">Contact/Donations</string>
    <string name="ach">Achievements</string>
    <string name="section3">Others</string>
    <string name="profile">News Update</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_nycn">The National Youth council of Nigeria was established in 1964, charged with the overall objective of policy formulation and implementation on issues bordering on youth development in Nigeria. The National Youth council of Nigeria was established in 1964 with its 36 state chapters including FCT and 774 LGA branches and affiliate VYO\’s. \n

And as apex body, is charged with the overall objective of policy formulation and implementation on issues bordering youth development in Nigeria. It also mobilizes all nationally recognized voluntary youth organizations, state youth council chapters and local government youth council branches to engage in activities that are of benefit to them and the nation at large.

\n Youth, according to the youth policy status, acknowledged youths as persons between the ages of 18 to 35. The NYCN is managed and govern by 23 national executive committee (NEC) members.

We remain steadfast to the pursuit of actualizing Change in Nigeria, while championing the movement as the network with the best grassroot outreach among youths in the country!
</string>
    <string name="about_ddi">
<html>        <body>
        <h1><i>Bio</i></h1>
        <p>
        <ul style="list-style-type:square">
          <li><strong>BIRTH NAME: </strong> Darius Dickson Ishaku</li>
          <li><strong>DATE OF BIRTH: </strong> 30th of July 1954</li><li><strong>MARITAL STATUS: </strong>Married</li>
          <li><strong>OCCUPATION: </strong>Architect/Politician: (Governor, Taraba State Nigeria (2015-2019)</li>
        </ul>

        </p>

        <h2><i>INTRODUCTION</i></h2>
        <p>Darius Dickson is a Nigerian architect, urban planner, university lecturer and political figure. He is a member of the People’s Democratic Party. Ishaku was previously the Minister of State for Niger Delta Affairs before he resigned to contest in the 2015 Taraba State gubernatorial election. He won the initial gubernatorial election and was elected Governor of Taraba State after winning the susequent re-run election.
        </p>
        <h2><i>EARLY LIFE AND BACKGROUND </i></h2>
         <p>
        Arc Darius Dickson Ishaku was born on friday 30th day of July 1954 to Mr Ishaku Istifanus and Mrs. Naomi at Lupwe, now in Ussa Local Government Area of Taraba State. He was the fifth of ten childresn and Had a very happy childhood.
        <br/>
        <br/>

The young Darius was Enrolled into St Bartholomew’s primary school, Wusasa, Zaria, in 1961, and obtain his first school leaving certificate in 1967.
He then proceed next door to famous St. Paul’s College Kufena, Zaria, for his secondary education, in 1972 and passed out in flying colours, obtaining the Almighty West African Examination Certificate(WASC).
        <br/>
        <br/>

With his outstanding performance in WASC, he secured admission in to the school of basic studies in prestigious Ahmadu Bello University, Zaria, in the same year(1972), for his advance Level education which was then a requirement for gaining admission into university, and he passed out in 1974.

        <br/>
        <br/>
DARIUS’ father was a building contractor, and right from an early age, Darius used to accompany him to his building sites when ever he comes home for holiday.
This experience, coupled with the years he spent among the rustic hills and rocks in untarnished and serene environment of WUSASA and Kufene,during his primary and secondary school helped him forge and interest in nature and his Eventual choice of his career.
        <br/>
        <br/>

He therefore developed interest in architecture and the study how to design buildings and other structures.
In 1974, he was admitted into school of Architecture Ahmadu Bello University, Zaria, where he obtained his Bachelor’s of Science Degree in Architecture in 1977.
Two years, in 1979, he bagged the master’s of Science Degree in Architecture with DISTINCTION! This was at a time when getting a distinction was a rare feat.
        <br/>
        <br/>

DARIUS did his National Youth Service at the Imo State Ministry of Works and Housing from 1979 to 1980. As a student at ABU, Zaria, between 1974 and 1979 he never forgot his roots and he ran back to do vocation Jobs at the GONGOLA STATE HOUSING CORPORATION in Yola at every oppotunity he got.
By the time Darius completed his Masters Degree in Architecture,he had travelled to many parts of the world specifically to see different architectural Landscapes, in addition to well plan and organise towns, cities and country-sides.
        <br />
        <br />

He appreciated this very much and it propelled him to pursue a Master’s Degree in Urban and Regional Planing, being confident that with additional skills and qualification he would be able to contribute to the new capital of Nigeria, Abuja, more meaningfully.
This was at the time when relocation from lagos to abuja had commenced.
In 1982, he was admitted as a Registered Member of the NIGERIAN INSTITUTE OF ARCHITECTS, and became a fellow of the institute (FNIA) in June, 2001.
        <br/>
        <br/>

        </p>
     <h2><i>CAREER AND LIFE</i></h2>
        <p>
As a young Architech, he worked with Inter Design Partnership in 1980, but however left to work with Bestarc International Association where he rose to the position of Director in 1983.
        <br/>
        <br/>

Through hardwork and courage he set out on his own by registering his own Architectural firm called Excelare Partners where he became the Managing Director with head office at Kaduna and branch offices at Yola, Abuja and Jos.
        <br/>
        <br/>

While Darius was busy carving a niche for himself in Architectural Practice, his Alma Mater, Ahmadu Bello University, Zari invited him and Eight (8) other distinguished Alumni who were also excelling in their own private practices to assist the department restore its accreditation with Architects Registration Council of Nigeria (ARCON), the regulatory body for the teaching and practice of Architecture in Nigeria.
        <br/>
        <br/>



There combine passion and commitment for there profession came to fore and within three years, ARCON restored the accreditation for the teaching of Architecture in ABU Zaria.
        <br/>
        <br/>

There Notable Contribution not only salvage the Architecture Department from being closed down because of dearth of requisite Manpower, but also engendered yet another accreditation from the Commonwealth Union of Architects (CUA) for the Department.
        <br/>
        <br/>

This was and impressive land mark achievement for the Department and the University.
        <br/>
        <br/>

In further Pursuit for Excellence and desire to quench insatiable thirst for higher academic and professional accomplishment and with several decades of architectural practice I tow, he began a rigorous PhD program in Architecture also at ABUD, Zaria in 2007.
        <br/>
        <br/>

The demand on his time however has made it difficult for him to complete the program till date. Arc Darius Dickson Ishaku is indeed a man of many part who acquired from his child hood Environment of WUSASA. Zaria, his Life’s interest, a life time choice of professional career and academic direction.

        <br/>
        <br/>
His expertise at his job has produced several architectural designs of great significant all over the Country. Some of the construction jobs he participated in includes; The central post office(boat design), Garki Abuja; the Market and shopping complex Area 7 Garki-Abuja; Faculty of distance learning and continuing Education, University of Abuja; Coordination of Development of Phase III District (FCDA) Abuja; 10 (Ten) storey residential Apartment blocks Abuja; Phase III General Land use Plan of Abuja Master Plan; 1000 Seat Lecture theatre and the Veterinary Teaching Hospital, ABU, Zaria; 250 Lecture Theatre and Medical Health Center, Nassarawa State University, Keffi; NARSDA Ministry of Science and Technology Housing Estate in Lagos.
        <br/>
        <br/>

It is imperative to note that he has been committed in providing free services in design, consultancy and supervision of several projects, which are beneficial to the welfare of the common man, some of which includes; Mitosath Clinic (River Blindness Clinic/Hospital) Jos; Renovation of Hekan Cathedral and Primary School Kaduna; Design and Supervision of Church Building Gubuchi-Ikara, Kaduna State.; Design and Supervision of Hekan Church, Jalingo Taraba State; Albarka Baptist Church Kaduna; Jukun Bible Institute Wukari Taraba State; Christian Reformed Church of Christ in Nigeria Hospital, Takum Taraba State.
        <br/>
        <br/>


Darius Ishaku was the past Minister of State for Niger Delta Affairs before he resigned in other to participate in the 2015 Gubernatorial polls. He however emerged as the Governor of Taraba State after a re-run election.
        </p>
        </body>
</html>

    </string>
</resources>